istio-chain-example/proxy-backend-app.yaml
# 7-proxy-backend-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-proxy-app # Deployment for the proxy service
  namespace: istio-chain-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-proxy-app # Label for these specific pods
  template:
    metadata:
      labels:
        app: hello-proxy-app # Label for these specific pods
    spec:
      containers:
      - name: hello-proxy # Container name
        image: docker.io/paulbouwer/hello-kubernetes:1.7 # Using same base image
        ports:
        - containerPort: 80
          name: http # Different port name for clarity
        resources:
          requests:
            cpu: "10m"
            memory: "32Mi"
